gst-libs/gst/gl/gstglupload.c
@@ -341,7 +341,7 @@ gst_gl_upload_perform_with_buffer (GstGLUpload * upload, GstBuffer * buffer,
   }
 
   /* update the video info from the one updated by frame_map using video meta */
-  upload->in_info = upload->priv->frame.info;
+  gst_gl_upload_set_format (upload, &upload->priv->frame.info);
 
   if (!gst_gl_upload_perform_with_data (upload, upload->priv->tex_id,
           upload->priv->frame.data)) {
